--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':dbdemo', ':glidedemo', ':kotdemo', ':dbutil', ':db'
+include ':app', ':glidedemo', ':kotdemo', ':dbutil', ':db'
 rootProject.name='StudyDemo'
