--- a/morr/build.gradle
+++ b/morr/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.1.0'
+    implementation("com.squareup.okhttp3:okhttp:4.4.0")
 }
