--- a/mvp/build.gradle
+++ b/mvp/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
     implementation 'com.jakewharton.rxbinding3:rxbinding:3.1.0'
+    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.5.1'
 }
