--- a/simpleeyes/build.gradle
+++ b/simpleeyes/build.gradle
@@ -65,4 +65,23 @@ dependencies {
     //pageIndicator
     implementation 'com.romandanylyk:pageindicatorview:1.0.1@aar'
 
+    //autodispose
+    implementation 'com.uber.autodispose:autodispose-android:1.4.0'
+    implementation 'com.uber.autodispose:autodispose-android-archcomponents:1.4.0'
+
+    //loadingView
+    implementation 'com.wang.avi:library:2.1.3'
+    implementation 'com.youth.banner:banner:1.4.10'
+    //recyclerView
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.44'
+
+    //RxJava
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 }
