--- a/simpleeyes/src/main/AndroidManifest.xml
+++ b/simpleeyes/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -25,6 +26,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.MainActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity android:name=".ui.home.DailyEliteActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity android:name=".ui.search.SearchHotActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity android:name=".ui.video.VideoDetailActivity"
             android:screenOrientation="portrait"
             />
     </application>
