--- a/simpleeyes/src/main/AndroidManifest.xml
+++ b/simpleeyes/src/main/AndroidManifest.xml
@@ -25,16 +25,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MainActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".ui.home.DailyEliteActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".ui.search.SearchHotActivity"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".ui.video.VideoDetailActivity"
+        <activity
+            android:name=".ui.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.home.DailyEliteActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.search.SearchHotActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.video.VideoDetailActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.feed.AllCategoryActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.follow.AllAuthorActivity"
             android:screenOrientation="portrait"
             />
     </application>
