--- a/simpleeyes/build.gradle
+++ b/simpleeyes/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     //recyclerView
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.44'
 
-    //RxJava
+    //RxJavacoroutines
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 
