--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,9 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "http://maven.aliyun.com/nexus/content/groups/public/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
@@ -24,6 +26,12 @@ allprojects {
         google()
         jcenter()
         maven{ url 'https://jitpack.io'}
+        maven() {
+            url 'https://maven.aliyun.com/repository/jcenter'
+        }
+        maven {
+            url "http://maven.aliyun.com/nexus/content/groups/public/"
+        }
     }
 }
 
