--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     ext.anko_version = '0.10.8'
     repositories {
         google()
-        jcenter()
+        //jcenter()
         maven {
             url "http://maven.aliyun.com/nexus/content/groups/public/"
         }
@@ -25,7 +25,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        //jcenter()
         maven{ url 'https://jitpack.io'}
         maven() {
             url 'https://maven.aliyun.com/repository/jcenter'
